# XuCommunications

./: CMakeLists.txt
3rd/libusb/lib/: libusb-1.0.lib
Src/: xudefine.h
Src/BaseTransfer/: xubasetransfer.cpp  xubasetransfer.h
Src/UsbTransfer/: xuperusbtransfer.h  xuusbtransfer.cpp  xuusbtransfermanager.cpp  xuusbtransfermanager.h
